[gd_scene load_steps=2 format=3 uid="uid://dcm7w6jnr46gv"]

[ext_resource type="Script" path="res://scripts/ui/OpeningCrawl.gd" id="1_opening"]

[node name="OpeningCrawl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opening")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.101961, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CrawlLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.886, 0.886, 0.29, 1)
theme_override_font_sizes/font_size = 28
text = "SECTOR 7 - FRONTIER DEFENSE
━━━━━━━━━━━━━━━━━━━━━━━━━

Enemy fleet detected at sector boundary.
12 days until main invasion force arrives.

You are Chief Engineer.
Your ship designs are our only hope.

BEGIN OPERATIONS."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "[SKIP]"
